--- a/src/output.css
+++ b/src/output.css
@@ -12,6 +12,7 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
+    --color-red-800: oklch(44.4% 0.177 26.899);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-700: oklch(48.8% 0.243 264.376);
@@ -21,7 +22,6 @@
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-800: oklch(27.8% 0.033 256.848);
-    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
@@ -261,12 +261,6 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
-  .bottom-10 {
-    bottom: calc(var(--spacing) * 10);
-  }
-  .bottom-96 {
-    bottom: calc(var(--spacing) * 96);
-  }
   .bottom-full {
     bottom: 100%;
   }
@@ -326,9 +320,6 @@
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
-  }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -648,6 +639,9 @@
   .border-primary-color {
     border-color: var(--color-primary-color);
   }
+  .border-red-800 {
+    border-color: var(--color-red-800);
+  }
   .border-transparent {
     border-color: transparent;
   }
@@ -659,12 +653,6 @@
   }
   .border-b-grey-six {
     border-bottom-color: var(--color-grey-six);
-  }
-  .bg-\[\#\#0000000f\] {
-    background-color: ##0000000f;
-  }
-  .bg-\[\#0000000f\] {
-    background-color: #0000000f;
   }
   .bg-\[\#1735590d\] {
     background-color: #1735590d;
@@ -687,17 +675,11 @@
   .bg-\[\#fafafa\] {
     background-color: #fafafa;
   }
-  .bg-blue-500 {
-    background-color: var(--color-blue-500);
-  }
   .bg-blue-color {
     background-color: var(--color-blue-color);
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
-  }
-  .bg-gray-800 {
-    background-color: var(--color-gray-800);
   }
   .bg-green-color {
     background-color: var(--color-green-color);
@@ -750,9 +732,6 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
-  .px-2\.5 {
-    padding-inline: calc(var(--spacing) * 2.5);
-  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -786,12 +765,6 @@
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .pt-0 {
-    padding-top: calc(var(--spacing) * 0);
-  }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
@@ -806,9 +779,6 @@
   }
   .text-left {
     text-align: left;
-  }
-  .text-right {
-    text-align: right;
   }
   .align-middle {
     vertical-align: middle;
@@ -899,14 +869,8 @@
   .text-gray-500 {
     color: var(--color-gray-500);
   }
-  .text-grey-eight {
-    color: var(--color-grey-eight);
-  }
   .text-grey-four {
     color: var(--color-grey-four);
-  }
-  .text-grey-seven {
-    color: var(--color-grey-seven);
   }
   .text-grey-six {
     color: var(--color-grey-six);
@@ -919,9 +883,6 @@
   }
   .text-primary-color {
     color: var(--color-primary-color);
-  }
-  .text-red-50 {
-    color: var(--color-red-50);
   }
   .text-red-500 {
     color: var(--color-red-500);
@@ -944,9 +905,6 @@
   .underline {
     text-decoration-line: underline;
   }
-  .accent-blue-700 {
-    accent-color: var(--color-blue-700);
-  }
   .accent-primary-color {
     accent-color: var(--color-primary-color);
   }
@@ -967,11 +925,6 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .drop-shadow-2xl {
-    --tw-drop-shadow-size: drop-shadow(0 25px 25px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.15)));
-    --tw-drop-shadow: drop-shadow(var(--drop-shadow-2xl));
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .drop-shadow-sm {
     --tw-drop-shadow-size: drop-shadow(0 1px 2px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.15)));
@@ -1036,9 +989,6 @@
   .select-all {
     -webkit-user-select: all;
     user-select: all;
-  }
-  .text-shadow-2xs {
-    text-shadow: 0px 1px 0px var(--tw-text-shadow-color, rgb(0 0 0 / 0.15));
   }
   .group-hover\:visible {
     &:is(:where(.group):hover *) {
@@ -1153,13 +1103,6 @@
       }
     }
   }
-  .hover\:opacity-100 {
-    &:hover {
-      @media (hover: hover) {
-        opacity: 100%;
-      }
-    }
-  }
   .focus\:border-grey-six {
     &:focus {
       border-color: var(--color-grey-six);
@@ -1192,25 +1135,14 @@
       line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
-  .md\:text-sm {
-    @media (width >= 48rem) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .md\:text-\[13px\] {
-    @media (width >= 48rem) {
-      font-size: 13px;
-    }
-  }
-  .md\:text-\[14px\] {
-    @media (width >= 48rem) {
-      font-size: 14px;
-    }
-  }
   .md\:text-\[15px\] {
     @media (width >= 48rem) {
       font-size: 15px;
+    }
+  }
+  .lg\:mt-0 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 0);
     }
   }
   .lg\:w-1\/2 {
@@ -1218,9 +1150,19 @@
       width: calc(1/2 * 100%);
     }
   }
+  .lg\:w-fit {
+    @media (width >= 64rem) {
+      width: fit-content;
+    }
+  }
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:justify-start {
+    @media (width >= 64rem) {
+      justify-content: flex-start;
     }
   }
   .xl\:col-span-1 {
@@ -1256,6 +1198,21 @@
   .xl\:grid-cols-4 {
     @media (width >= 80rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
+  .xl\:pl-0\.5 {
+    @media (width >= 80rem) {
+      padding-left: calc(var(--spacing) * 0.5);
+    }
+  }
+  .xl\:pl-1 {
+    @media (width >= 80rem) {
+      padding-left: calc(var(--spacing) * 1);
+    }
+  }
+  .xl\:pl-3 {
+    @media (width >= 80rem) {
+      padding-left: calc(var(--spacing) * 3);
     }
   }
 }
@@ -1462,15 +1419,6 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-text-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-text-shadow-alpha {
-  syntax: "<percentage>";
-  inherits: false;
-  initial-value: 100%;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1520,8 +1468,6 @@
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
       --tw-ease: initial;
-      --tw-text-shadow-color: initial;
-      --tw-text-shadow-alpha: 100%;
     }
   }
 }
