--- a/src/output.css
+++ b/src/output.css
@@ -1185,6 +1185,11 @@
       padding-right: calc(var(--spacing) * 1);
     }
   }
+  .lg\:pl-1 {
+    @media (width >= 64rem) {
+      padding-left: calc(var(--spacing) * 1);
+    }
+  }
   .xl\:col-span-1 {
     @media (width >= 80rem) {
       grid-column: span 1 / span 1;
@@ -1220,6 +1225,16 @@
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
+  .xl\:px-5 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 5);
+    }
+  }
+  .xl\:px-6 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 6);
+    }
+  }
   .xl\:pl-1 {
     @media (width >= 80rem) {
       padding-left: calc(var(--spacing) * 1);
@@ -1233,6 +1248,11 @@
   .dark\:border-dark-grey-six {
     &:where(.dark, .dark *) {
       border-color: var(--color-dark-grey-six);
+    }
+  }
+  .dark\:border-dark-primary-color {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-dark-primary-color);
     }
   }
   .dark\:bg-\[\#23272a\] {
